[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puzzle"
version = "0.1.0"
# description = "Chess puzzle solver with multiple solution approaches"
# authors = [
#     {name = "Your Name", email = "your.email@example.com"}
# ]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
]

dependencies = [
    "numpy",
    "numba",
    "tqdm",
    "click",
    "networkx",
    "ruff",
]

[project.scripts]
js1 = "js.number_cross_5_index.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
